Lecture id d'un tag

--- a/nfc/app/src/main/AndroidManifest.xml
+++ b/nfc/app/src/main/AndroidManifest.xml
@@ -29,12 +29,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.cfpt.nfc.MainActivity" />
-        </activity>
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
